--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -7,6 +7,11 @@ body {
     margin-top: 50px;
 }
 
+.bg-white {
+    border-style: solid;
+    border-width: 10px;
+}
+
 .nav {
     position: fixed;
     bottom: 0;
