--- a/styles/profile_style.css
+++ b/styles/profile_style.css
@@ -3,6 +3,7 @@
 body {
     font-family: 'Patrick Hand';
     background-color: #6BAA75;
+    background-image: radial-gradient(rgb(0, 175, 0),rgba(255, 255, 255, 0));
 }
 
 .collapsible {
