--- a/styles/quiz_style.css
+++ b/styles/quiz_style.css
@@ -5,6 +5,7 @@ body {
   background: #6BAA75;
   margin: 0 0 55px 0;
   margin-top: 50px;
+  background-image: radial-gradient(rgb(0, 175, 0),rgba(255, 255, 255, 0));
 }
 
 .nav {
