--- a/styles/profile_style.css
+++ b/styles/profile_style.css
@@ -16,6 +16,15 @@ body {
     outline: none;
 }
 
+.bg-white {
+    border-style: solid;
+    border-width: 10px;
+}
+
+.container-fluid {
+    width: 90vw;
+}
+
 .nav {
     position: fixed;
     bottom: 0;
