--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -54,6 +54,7 @@ body {
     margin: 0 auto;
     padding: 30px;
     background: rgba(0, 0, 0, 0.25);
+    background-image: linear-gradient(to top, rgb(129, 224, 145),rgb(38, 134, 38));
 }
 
 .logo {
